# cpp_game_dev

./: .gitignore  .gitmodules  README.md
sdl/: CMakeLists.txt  bootstrap.sh
sdl/cmake/: common.cmake  macros.cmake
sdl/headers/: Game.h  Pong.h  Rect.h
sdl/headers/GOM/: Actor.h
sdl/lib/: CMakeLists.txt
sdl/lib/Logger/: CMakeLists.txt  Logger.h
sdl/lib/Random/: CMakeLists.txt  Random.h
sdl/lib/glad/: CMakeLists.txt  glad.c  glad.h
sdl/lib/math/: CMakeLists.txt  Math.cpp  Math.h
sdl/src/: Game.cpp  Pong.cpp  main.cpp
sdl/src/AI/: CMakeLists.txt  Game.cpp  Game.h  Search.cpp
sdl/src/AI/components/: AIState.cpp  AnimSpriteComponent.h  AnimeSpriteComponent.cpp  BGSpriteComponent.cpp  Component.h  InputComponent.h  MoveComponent.h  SpriteComponent.cpp
sdl/src/AI/utils/: Logger.h  Random.cpp
sdl/src/GOM/: Actor.cpp
sdl/src/asteroid/: CMakeLists.txt  Game.cpp  Game.h
sdl/src/asteroid/actors/: Actor.cpp  Actor.h  Asteroid.cpp  Asteroid.h  Ship.cpp  Ship.h
sdl/src/asteroid/components/: AIComponent.cpp  AIComponent.h  AIState.cpp  AIState.h  AnimSpriteComponent.h  BGSpriteComponent.h  CircleComponent.cpp  CircleComponent.h  Component.cpp  InputComponent.cpp  MoveComponent.cpp  SpriteComponent.cpp  SpriteComponent.h
sdl/src/asteroid/utils/: Random.h
sdl/src/om/: Actor.cpp  Actor.h  BGSpriteComponent.cpp  BGspriteComponent.h  CMakeLists.txt  Component.cpp  Component.h  Game.cpp  Game.h  Math.h  Ship.cpp  SpriteComponent.cpp  SpriteComponent.h
sdl/src/opengl/: CMakeLists.txt  Game.cpp  Game.h  Shader.cpp  Shader.h  VertexArrayBuffer.cpp  VertexArrayBuffer.h  main.cpp
sdl/src/opengl/EN/: Game.cpp  Game.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
sdl/src/opengl/Shaders/: Sprite.vert  Transform.vert
sdl/src/opengl/actors/: Actor.cpp  Actor.h  Asteroid.cpp  Asteroid.h  Laser.cpp  Laser.h  Ship.cpp  Ship.h
sdl/src/opengl/components/: AIComponent.cpp  AIComponent.h  BGSpriteComponent.cpp  BGSpriteComponent.h  CircleComponent.cpp  CircleComponent.h  Component.cpp  Component.h  InputComponent.cpp  InputComponent.h  MoveComponent.cpp  MoveComponent.h  SpriteComponent.cpp  SpriteComponent.h
sdl/src/opengl/shaders/: basic.frag.glsl  basic.vert.glsl
sdl/src/pong/: CMakeLists.txt  Game.cpp  Game.h  Pong.cpp  Pong.h  main.cpp
sfml_games/: hellosfml.cpp
sfml_games/archi/: CMakeLists.txt  main.cpp
sfml_games/archi/headers/: Action.hpp  ActionMap.hpp  ActionMap.tpl  ActionTarget.hpp  ActionTarget.tpl  Configuration.hpp  Game.hpp  Player.hpp  ResourceManager.hpp  ResourceManager.tpl  action.hpp  game.h  game.hpp  player.h  player.hpp
sfml_games/archi/src/: Action.cpp  ActionTarget.cpp  Configuration.cpp  Game.cpp  Player.cpp  game.cpp  main.cpp  player.cpp
sfml_games/asteroid/: CMakeLists.txt
sfml_games/asteroid/headers/: Action.hpp  ActionMap.hpp  ActionMap.tpl  ActionTarget.hpp  ActionTarget.tpl  Collision.hpp  Configuration.hpp  Enemy.hpp  Entity.hpp  Game.hpp  Meteor.hpp  Player.hpp  ResourceManager.hpp  ResourceManager.tpl  Saucer.hpp  Shoot.hpp  World.hpp  random.hpp
sfml_games/asteroid/src/: Action.cpp  Collision.cpp  Configuration.cpp  Enemy.cpp  Entity.cpp  Game.cpp  Meteor.cpp  Player.cpp  Saucer.cpp  Shoot.cpp  World.cpp  main.cpp
